# INFOMGP-Practical3

./: .gitignore  CMakeLists.txt  auxfunctions.h  constraints.h  main.cpp  mesh.cpp  mesh.h  scene.cpp  scene.h
